--- a/index.html
+++ b/index.html
@@ -5,19 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meirochou</title>
     <link rel="icon" href="./icon.jpeg">
-    <style>
-        body {
-            background-color: #000000;
-        }
-        h1 {
-            font-family: "Comic Sans MS";
-            text-align: center;
-            font-size: 50px;
-            color: #FFFFFF;
-        }
-    </style>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <h1>My favorite anime is Urara Meirochou.</h1>
+    <img src="chiya.gif" alt="CHIYA GIF POGGERS!">
 </body>
 </html>
