--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 </head>
 <body>
     <h1>My favorite anime is Urara Meirochou.</h1>
-    <img src="chiya.gif" alt="CHIYA GIF POGGERS!">
+    <img src="uraras.gif" alt="URARAS GIF POGGERS!">
 </body>
 </html>
