Testing embed stuff for discord

--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meirochou</title>
+    <meta content="Meirochou" property="og:title" />
+    <meta content="I LOVE URARAS! YOU MUST LOVE URARAS!" property="og:description" />
     <link rel="icon" href="./icon.jpeg">
     <link rel="stylesheet" href="./style.css">
+    <title>Meirochou</title>
 </head>
 <body>
     <h1>My favorite anime is Urara Meirochou.</h1>
