Visitors counter added.

--- a/index.html
+++ b/index.html
@@ -12,5 +12,10 @@
 <body>
     <h1>My favorite anime is Urara Meirochou.</h1>
     <img src="uraras.gif" alt="URARAS GIF POGGERS!">
+
+    <section class="counterSection">
+        <div class="counter"></div>
+    </section>
 </body>
+<script defer src="./script.js"></script>
 </html>
