Updating the website browser

--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
     <meta content="I LOVE URARAS! YOU MUST LOVE URARAS!" property="og:description" />
     <link rel="icon" href="./icon.jpeg">
     <link rel="stylesheet" href="./style.css">
-    <title>Meirochou</title>
+    <title>Meirochou!</title>
 </head>
 <body>
     <h1>My favorite anime is Urara Meirochou.</h1>
     <img src="uraras.gif" alt="URARAS GIF POGGERS!">
 
-    <section class="counterSection">
-        <div class="counter"></div>
-    </section>
+    <p>Visitors count:</p>
+    <a class="counterImage" href="#">
+        <img class="counterImage" src="https://www.cutercounter.com/hits.php?id=huxokxqc&nd=6&style=2" border="0" alt="website counter">
+    </a>
 </body>
-<script defer src="./script.js"></script>
 </html>
